Fixing horizontal spacing

--- a/src/components/Widget/Widget.scss
+++ b/src/components/Widget/Widget.scss
@@ -16,6 +16,11 @@
   background: $gray-600;
 }
 
+.widget-header-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .widget-content {
   flex: 1 1 auto;
   padding: $spacer;
